--- a/.github/workflows/reF1nd.yml
+++ b/.github/workflows/reF1nd.yml
@@ -102,7 +102,6 @@ jobs:
 
       - name: Build sing-box (linux arm64 minimal)
         env:
-          CGO_ENABLED: 0
           GOOS: linux
           GOARCH: arm64
         run: |
@@ -115,7 +114,7 @@ jobs:
 
       - name: Build sing-box (windows amd64 minimal)
         env:
-          CGO_ENABLED: 0 # Windows build must disable CGO
+          CGO_ENABLED: "0" # Windows 必须禁用 CGO
           GOOS: windows
           GOARCH: amd64
         run: |
